# simpleHTTP

./: .clang-format  .gitattributes  .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: ci.yml
cmake/: simpleHTTP-config.cmake.in
examples/: base_example.cpp
include/: simpleHTTP.hpp  socket.hpp
src/: simpleHTTP.cpp  socket.cpp
